<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/orange"/>



    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/instructions1"
                android:text="@string/nasa_earth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="25dp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/instructions2"
                android:text="@string/main_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/instructions1"
                android:layout_centerHorizontal="true"
                android:textSize="14dp"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/instructions2"
                android:id="@+id/lonLayout">

                <TextView
                    android:id="@+id/tagLon"
                    android:text="@string/longitude"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="20dp"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/inputLon"
                    android:hint="@string/lon_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/instructions2"
                    android:layout_toRightOf="@id/tagLon"
                    android:textSize="13dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lonLayout"
                android:id="@+id/latLayout">

                <TextView
                    android:id="@+id/tagLat"
                    android:text="@string/latitude"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/inputLon"
                    android:textSize="20dp"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/inputLat"
                    android:hint="@string/lat_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/inputLon"
                    android:layout_toRightOf="@id/tagLat"
                    android:textSize="13dp"/>

            </LinearLayout>


            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fetch_image"
                android:layout_below="@+id/latLayout"
                />

            <Button
                android:id="@+id/buttonFavourites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_favorites"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/latLayout"/>

            <FrameLayout
                android:id="@+id/fragmentLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonFavourites" />

        </RelativeLayout>


        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/menu_drawer"
            android:id="@+id/nav_view"
            app:headerLayout="@layout/navigation_drawer_header" />
    </androidx.drawerlayout.widget.DrawerLayout>


</LinearLayout>