<?xml version="1.0" encoding="utf-8"?>
<GridLayout    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rowCount="3"
    android:columnCount="2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:id="@+id/dateText"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/latText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/latitude"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/imageNasa"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_rowSpan="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:id="@+id/lonText"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="center_vertical"/>






</GridLayout>