<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bbc_toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bbcred" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
            android:id="@+id/bbc_showAllBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/black"
            android:text="@string/bbc_showAllBtn"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/bbc_favoritesBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/bbc_showAllBtn"
            android:backgroundTint="@android:color/black"
            android:fontFamily="sans-serif-medium"
            android:text="@string/bbc_favoritesBtn"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/bbc_addMailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bbc_showAllBtn"
            android:hint="@string/bbc_addMailText" />

        <Button
            android:id="@+id/bbc_addMailBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bbc_showAllBtn"
            android:layout_toRightOf="@id/bbc_addMailText"
            android:backgroundTint="@android:color/black"
            android:text="@string/bbc_addMailBtn"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/bbc_helpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/bbc_favoritesBtn"
            android:backgroundTint="@android:color/black"
            android:text="@string/bbc_helpBtn"
            android:textColor="@android:color/white" />

        <ProgressBar
            android:id="@+id/bbc_progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bbc_addMailText"
            android:progressTint="@android:color/holo_red_dark" />

        <ListView
            android:id="@+id/bbc_listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bbc_progressBar" />

        </RelativeLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/navigation_drawer_header"
            app:menu="@menu/menu_drawer" />
    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>