<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/guardian_toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_purple" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/guardian_favourites_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:backgroundTint="@android:color/black"
                android:text="@string/view_favorites"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/searchText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/guardian_favourites_button"
                android:hint="@string/search_hint" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/guardian_favourites_button"
                android:backgroundTint="@android:color/black"
                android:text="@string/search"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/help_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/search_button"
                android:backgroundTint="@android:color/black"
                android:text="@string/help"
                android:textColor="@android:color/white" />


            <ProgressBar
                android:id="@+id/article_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/search_button"
                android:progressTint="@android:color/holo_red_dark"
                android:visibility="invisible" />

            <ListView
                android:id="@+id/titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/searchText" />

        </RelativeLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/navigation_drawer_header"
            app:menu="@menu/menu_drawer" />
    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>
